RESOLVED FIXED112413
[Texmap] layerRect should be used instead of contents rect for scrollable layer hit tests.
https://bugs.webkit.org/show_bug.cgi?id=112413
Summary [Texmap] layerRect should be used instead of contents rect for scrollable lay...
Luiz Agostini
Reported 2013-03-15 00:20:27 PDT
layerRect should be used instead of contents rect for scrollable layer hit tests.
Attachments
patch (2.29 KB, patch)
2013-03-15 00:25 PDT, Luiz Agostini
noam: review+
luiz: commit-queue-
patch (2.31 KB, patch)
2013-03-15 00:36 PDT, Luiz Agostini
no flags
Luiz Agostini
Comment 1 2013-03-15 00:25:41 PDT
Noam Rosenthal
Comment 2 2013-03-15 00:30:07 PDT
Comment on attachment 193248 [details] patch Please add [Texmap] or something to the bug title.
Luiz Agostini
Comment 3 2013-03-15 00:36:37 PDT
WebKit Review Bot
Comment 4 2013-03-15 01:08:48 PDT
Comment on attachment 193250 [details] patch Clearing flags on attachment: 193250 Committed r145883: <http://trac.webkit.org/changeset/145883>
WebKit Review Bot
Comment 5 2013-03-15 01:08:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.