[Texmap] layerRect should be used instead of contents rect for scrollable layer hit tests. https://bugs.webkit.org/show_bug.cgi?id=112413

Patch by Luiz Agostini <luiz.agostini@nokia.com> on 2013-03-15
Reviewed by Noam Rosenthal.

Using layerRect() instead of m_state.contentsRect for scrollable layer hit test.
* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::scrollableLayerHitTestCondition):

Canonical link: https://commits.webkit.org/130718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145883 268f45cc-cd09-0410-ab3c-d52691b4dbfc