Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp
@@ -698,13 +698,7 @@ bool TextureMapperLayer::scrollableLayerHitTestCondition(TextureMapperLayer* lay
         return false;
 
     TextureMapperLayer* parentLayer = layer->m_parent->m_parent;
-
-    FloatRect rect;
-    if (parentLayer->m_backingStore)
-        rect = parentLayer->layerRect();
-    else if (parentLayer->m_contentsLayer)
-        rect = parentLayer->m_state.contentsRect;
-
+    FloatRect rect = parentLayer->layerRect();
     return parentLayer->m_currentTransform.combined().mapQuad(rect).containsPoint(point);
 }
 
